==> andykarpov/karabas-pro/firmware/src/rp2040/lib/PS2KeyAdvanced-Pico/src/PS2KeyAdvanced.cpp <==
#include "pico/stdlib.h"
#include "hardware/gpio.h"
#include "hardware/sync.h"
#include "pico/time.h"
#define LOW  0
#define HIGH 1
#define OUTPUT GPIO_OUT
#define INPUT GPIO_IN
#include "PS2KeyAdvanced.h"
#include "PS2KeyCode.h"
#include "PS2KeyTable.h"

void PS2KeyAdvanced::ps2interrupt( void )
{
if( _ps2mode & _TX_MODE )
  send_bit( );
else
  {
  static uint32_t prev_ms = 0;
  uint32_t now_ms;
  uint8_t val, ret;

  val = gpio_get( PS2_DataPin );
  /* timeout catch for glitches reset everything */
  now_ms = to_ms_since_boot(get_absolute_time());
  if( now_ms - prev_ms > 250 )
    {
    _bitcount = 0;
    _shiftdata = 0;
    }
  prev_ms = now_ms;
  _bitcount++;             // Now point to next bit
  switch( _bitcount )
    {
    case 1: // Start bit
            _parity = 0;
            _ps2mode |= _PS2_BUSY;    // set busy
            break;
    case 2:
    case 3:
    case 4:
    case 5:
    case 6:
    case 7:
    case 8:
    case 9: // Data bits
            _parity += val;          // another one received ?
            _shiftdata >>= 1;        // right _SHIFT one place for next bit
            _shiftdata |= ( val ) ? 0x80 : 0;    // or in MSbit
            break;
    case 10: // Parity check
            _parity &= 1;            // Get LSB if 1 = odd number of 1's so parity bit should be 0
            if( _parity == val )     // Both same parity error
              _parity = 0xFD;        // To ensure at next bit count clear and discard
            break;
    case 11: // Stop bit lots of spare time now
            if( _parity >= 0xFD )    // had parity error
              {
              send_now( PS2_KC_RESEND );    // request resend
              _tx_ready |= _HANDSHAKE;
              }
            else                    // Good so save byte in _rx_buffer
              {
              // Check _SHIFTed data for commands and action
              ret = decode_key( _shiftdata );
              if( ret & 0x2 )       // decrement expected bytes
                _bytes_expected--;
              if( _bytes_expected <= 0 || ret & 4 )   // Save value ??
                {
                val = _head + 1;
                if( val >= _RX_BUFFER_SIZE )
                  val = 0;
                if( val != _tail )
                  {
                  // get last byte to save
                  _rx_buffer[ val ] = uint16_t( _shiftdata );
                  // save extra details
                  _rx_buffer[ val ] |= uint16_t( _ps2mode ) << 8;
                  _head = val;
                  }
                }
              if( ret & 0x10 )              // Special command to send (ECHO/RESEND)
                {
                send_now( _now_send );
                _tx_ready |= _HANDSHAKE;
                }
              else
                if( _bytes_expected <= 0 )  // Receive data finished
                  {
                  // Set mode and status for next receive byte
                  _ps2mode &= ~( _E0_MODE + _E1_MODE + _WAIT_RESPONSE + _BREAK_KEY );
                  _bytes_expected = 0;
                  _ps2mode &= ~_PS2_BUSY;
                  send_next( );              // Check for more to send
                  }
              }
            _bitcount = 0;	            // end of byte
            break;
    default: // in case of weird error and end of byte reception re-sync
            _bitcount = 0;
    }
  }
}

void send_now( uint8_t command )
{
_shiftdata = command;
_now_send = command;     // copy for later to save in last sent
_bitcount = 0;          // Normal processors
_parity = 0;
_ps2mode |= _TX_MODE + _PS2_BUSY;

// Only do this if sending a command not from Handshaking
if( !( _tx_ready & _HANDSHAKE ) && ( _tx_ready & _COMMAND ) )
  {
  _bytes_expected = _response_count;  // How many bytes command will generate
  _ps2mode |= _WAIT_RESPONSE;
  }

// STOP interrupt handler 
// Setting pin output low will cause interrupt before ready
gpio_set_irq_enabled(PS2_IrqPin, GPIO_IRQ_EDGE_FALL, false); //detachInterrupt( digitalPinToInterrupt( PS2_IrqPin ) );
// set pins to outputs and high
// gpio_put( PS2_DataPin, HIGH );
// gpio_set_dir( PS2_DataPin, OUTPUT );
// gpio_put( PS2_IrqPin, HIGH );
// gpio_set_dir( PS2_IrqPin, OUTPUT );
// Essential for PS2 spec compliance
busy_wait_us_32( 10 );
// set Clock LOW
gpio_set_dir(PS2_IrqPin, OUTPUT);
gpio_put( PS2_IrqPin, LOW );
// Essential for PS2 spec compliance
// set clock low for 60us
busy_wait_us_32( 60 );
// Set data low - Start bit
gpio_set_dir(PS2_DataPin, OUTPUT);
gpio_put( PS2_DataPin, LOW );
// set clock to input_pullup data stays output while writing to keyboard
pininput( PS2_IrqPin );
// Restart interrupt handler
gpio_set_irq_enabled_with_callback(PS2_IrqPin, GPIO_IRQ_EDGE_FALL, true, gpioCallback); //attachInterrupt( PS2_IrqPin ), ps2interrupt, FALLING );
//  wait clock interrupt to send data
}

void pininput( uint8_t pin )
{
/* digitalWrite( pin, HIGH );
pinMode( pin, INPUT ); */
gpio_set_dir(pin, GPIO_IN);
gpio_pull_up(pin);
gpio_put(pin, HIGH);
}

void PS2KeyAdvanced::begin( uint8_t data_pin, uint8_t irq_pin, void(*cb)(uint, uint32_t) )
{
/* PS2 variables reset */
ps2_reset( );

PS2_DataPin = data_pin;
PS2_IrqPin = irq_pin;

// initialize the pins
gpio_init(PS2_IrqPin);
pininput( PS2_IrqPin );            /* Setup Clock pin */
gpio_init(PS2_DataPin);
pininput( PS2_DataPin );           /* Setup Data pin */

// Start interrupt handler
gpioCallback = cb;
gpio_set_irq_enabled_with_callback(PS2_IrqPin, GPIO_IRQ_EDGE_FALL, true, gpioCallback);
}
