==> techpaul/PS2KeyAdvanced/src/PS2KeyAdvanced.cpp <==
#include <Arduino.h>
#include "PS2KeyAdvanced.h"
#include "PS2KeyCode.h"
#include "PS2KeyTable.h"

void ps2interrupt( void )
{
// Workaround for ESP32 SILICON error see extra/Porting.md
#ifdef PS2_ONLY_CHANGE_IRQ
if( digitalRead( PS2_IrqPin ) )
   return;
#endif
if( _ps2mode & _TX_MODE )
  send_bit( );
else
  {
  static uint32_t prev_ms = 0;
  uint32_t now_ms;
  uint8_t val, ret;

  val = digitalRead( PS2_DataPin );
  /* timeout catch for glitches reset everything */
  now_ms = millis( );
  if( now_ms - prev_ms > 250 )
    {
    _bitcount = 0;
    _shiftdata = 0;
    }
  prev_ms = now_ms;
  _bitcount++;             // Now point to next bit
  switch( _bitcount )
    {
    case 1: // Start bit
            _parity = 0;
            _ps2mode |= _PS2_BUSY;    // set busy
            break;
    case 2:
    case 3:
    case 4:
    case 5:
    case 6:
    case 7:
    case 8:
    case 9: // Data bits
            _parity += val;          // another one received ?
            _shiftdata >>= 1;        // right _SHIFT one place for next bit
            _shiftdata |= ( val ) ? 0x80 : 0;    // or in MSbit
            break;
    case 10: // Parity check
            _parity &= 1;            // Get LSB if 1 = odd number of 1's so parity bit should be 0
            if( _parity == val )     // Both same parity error
              _parity = 0xFD;        // To ensure at next bit count clear and discard
            break;
    case 11: // Stop bit lots of spare time now
            if( _parity >= 0xFD )    // had parity error
              {
              send_now( PS2_KC_RESEND );    // request resend
              _tx_ready |= _HANDSHAKE;
              }
            else                    // Good so save byte in _rx_buffer
              {
              // Check _SHIFTed data for commands and action
              ret = decode_key( _shiftdata );
              if( ret & 0x2 )       // decrement expected bytes
                _bytes_expected--;
              if( _bytes_expected <= 0 || ret & 4 )   // Save value ??
                {
                val = _head + 1;
                if( val >= _RX_BUFFER_SIZE )
                  val = 0;
                if( val != _tail )
                  {
                  // get last byte to save
                  _rx_buffer[ val ] = uint16_t( _shiftdata );
                  // save extra details
                  _rx_buffer[ val ] |= uint16_t( _ps2mode ) << 8;
                  _head = val;
                  }
                }
              if( ret & 0x10 )              // Special command to send (ECHO/RESEND)
                {
                send_now( _now_send );
                _tx_ready |= _HANDSHAKE;
                }
              else
                if( _bytes_expected <= 0 )  // Receive data finished
                  {
                  // Set mode and status for next receive byte
                  _ps2mode &= ~( _E0_MODE + _E1_MODE + _WAIT_RESPONSE + _BREAK_KEY );
                  _bytes_expected = 0;
                  _ps2mode &= ~_PS2_BUSY;
                  send_next( );              // Check for more to send
                  }
              }
            _bitcount = 0;	            // end of byte
            break;
    default: // in case of weird error and end of byte reception re-sync
            _bitcount = 0;
    }
  }
}

void send_now( uint8_t command )
{
_shiftdata = command;
_now_send = command;     // copy for later to save in last sent
#if defined( PS2_CLEAR_PENDING_IRQ ) 
_bitcount = 0;          // AVR/SAM ignore extra interrupt
#else
_bitcount = 1;          // Normal processors
#endif
_parity = 0;
_ps2mode |= _TX_MODE + _PS2_BUSY;

// Only do this if sending a command not from Handshaking
if( !( _tx_ready & _HANDSHAKE ) && ( _tx_ready & _COMMAND ) )
  {
  _bytes_expected = _response_count;  // How many bytes command will generate
  _ps2mode |= _WAIT_RESPONSE;
  }

// STOP interrupt handler 
// Setting pin output low will cause interrupt before ready
detachInterrupt( digitalPinToInterrupt( PS2_IrqPin ) );
// set pins to outputs and high
digitalWrite( PS2_DataPin, HIGH );
pinMode( PS2_DataPin, OUTPUT );
digitalWrite( PS2_IrqPin, HIGH );
pinMode( PS2_IrqPin, OUTPUT );
// Essential for PS2 spec compliance
delayMicroseconds( 10 );
// set Clock LOW
digitalWrite( PS2_IrqPin, LOW );
// Essential for PS2 spec compliance
// set clock low for 60us
delayMicroseconds( 60 );
// Set data low - Start bit
digitalWrite( PS2_DataPin, LOW );
// set clock to input_pullup data stays output while writing to keyboard
pininput( PS2_IrqPin );
// Restart interrupt handler
attachInterrupt( digitalPinToInterrupt( PS2_IrqPin ), ps2interrupt, FALLING );
//  wait clock interrupt to send data
}

void pininput( uint8_t pin )
{
#ifdef INPUT_PULLUP
pinMode( pin, INPUT_PULLUP );
#else
digitalWrite( pin, HIGH );
pinMode( pin, INPUT );
#endif
}

void PS2KeyAdvanced::begin( uint8_t data_pin, uint8_t irq_pin )
{
/* PS2 variables reset */
ps2_reset( );

PS2_DataPin = data_pin;
PS2_IrqPin = irq_pin;

// initialize the pins
pininput( PS2_IrqPin );            /* Setup Clock pin */
pininput( PS2_DataPin );           /* Setup Data pin */

// Start interrupt handler
attachInterrupt( digitalPinToInterrupt( irq_pin ), ps2interrupt, FALLING );
}
